Update codeowners to add ManufacturingRP

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -279,6 +279,9 @@
 # PRLabel: %Profile
 /profile/ @shahabhijeet
 
+# PRLabel: %Manufacturing
+/specification/manufacturingplatform/ @ishitam8 @ShubhamAnand2098
+
 /specification/**/resource-manager/**/readme.typescript.md @qiaozha
 /specification/**/resource-manager/**/readme.az.md @jsntcy @qiaozha
 /specification/**/resource-manager/**/readme.cli.md @jsntcy @qiaozha
