--- a/specification/edge/resource-manager/Microsoft.Edge/configurationmanager/stable/2025-08-01/configurationmanager.json
+++ b/specification/edge/resource-manager/Microsoft.Edge/configurationmanager/stable/2025-08-01/configurationmanager.json
@@ -4784,7 +4784,7 @@
             "description": "The resource properties to be updated.",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/SolutionTemplateUpdate"
+              "$ref": "#/definitions/SolutionTemplatesUpdate"
             }
           }
         ],
@@ -4793,6 +4793,20 @@
             "description": "Azure operation completed successfully.",
             "schema": {
               "$ref": "#/definitions/SolutionTemplate"
+            }
+          },
+          "202": {
+            "description": "Resource update request accepted.",
+            "headers": {
+              "Location": {
+                "type": "string",
+                "description": "The Location header contains the URL where the status of the long running operation can be checked."
+              },
+              "Retry-After": {
+                "type": "integer",
+                "format": "int32",
+                "description": "The Retry-After header can indicate how long the client should wait before polling the operation status."
+              }
             }
           },
           "default": {
@@ -4806,7 +4820,11 @@
           "SolutionTemplates_Update_MaximumSet": {
             "$ref": "./examples/SolutionTemplates_Update_MaximumSet_Gen.json"
           }
-        }
+        },
+        "x-ms-long-running-operation-options": {
+          "final-state-via": "location"
+        },
+        "x-ms-long-running-operation": true
       },
       "delete": {
         "operationId": "SolutionTemplates_Delete",
@@ -7583,25 +7601,6 @@
         ]
       }
     },
-    "Azure.ResourceManager.CommonTypes.TrackedResourceUpdate": {
-      "type": "object",
-      "title": "Tracked Resource",
-      "description": "The resource model definition for an Azure Resource Manager tracked top level resource which has 'tags' and a 'location'",
-      "properties": {
-        "tags": {
-          "type": "object",
-          "description": "Resource tags.",
-          "additionalProperties": {
-            "type": "string"
-          }
-        }
-      },
-      "allOf": [
-        {
-          "$ref": "../../../../../../common-types/resource-management/v5/types.json#/definitions/Resource"
-        }
-      ]
-    },
     "BulkDeploySolutionParameter": {
       "type": "object",
       "description": "Bulk deploy solution parameter",
@@ -9906,46 +9905,6 @@
         "capabilities"
       ]
     },
-    "SolutionTemplatePropertiesUpdate": {
-      "type": "object",
-      "description": "Solution Template Properties",
-      "properties": {
-        "description": {
-          "type": "string",
-          "description": "Description of Solution template"
-        },
-        "capabilities": {
-          "type": "array",
-          "description": "List of capabilities",
-          "items": {
-            "type": "string"
-          }
-        },
-        "state": {
-          "$ref": "#/definitions/ResourceState",
-          "description": "State of resource"
-        },
-        "enableExternalValidation": {
-          "type": "boolean",
-          "description": "Flag to enable external validation"
-        }
-      }
-    },
-    "SolutionTemplateUpdate": {
-      "type": "object",
-      "description": "Solution Template Resource. Contains capabilities and operations for creating versions.",
-      "properties": {
-        "properties": {
-          "$ref": "#/definitions/SolutionTemplatePropertiesUpdate",
-          "description": "The resource-specific properties for this resource."
-        }
-      },
-      "allOf": [
-        {
-          "$ref": "#/definitions/Azure.ResourceManager.CommonTypes.TrackedResourceUpdate"
-        }
-      ]
-    },
     "SolutionTemplateVersion": {
       "type": "object",
       "description": "Solution Template Version Resource. Contains configurations that use expressions which can be resolved hierarchically along with edge specifications.",
@@ -10036,6 +9995,27 @@
       "required": [
         "solutionTemplateVersion"
       ]
+    },
+    "SolutionTemplatesUpdate": {
+      "type": "object",
+      "description": "The type used for update operations of the SolutionTemplates.",
+      "properties": {
+        "properties": {
+          "$ref": "#/definitions/SolutionTemplatesUpdateProperties",
+          "description": "The resource-specific properties for this resource."
+        },
+        "tags": {
+          "type": "object",
+          "description": "Resource tags.",
+          "additionalProperties": {
+            "type": "string"
+          }
+        }
+      }
+    },
+    "SolutionTemplatesUpdateProperties": {
+      "type": "object",
+      "description": "The updatable properties of the Solution."
     },
     "SolutionUpdate": {
       "type": "object",
